--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     
-    <main id="root"></main>
+    <main id="root"git ></main>
     <script src="main.js" type="module"></script>
 </body>
 </html>
